--- a/src/app/customer-list/customer-list.component.html
+++ b/src/app/customer-list/customer-list.component.html
@@ -1,33 +1,113 @@
-<p>customer-list works!</p>
- <table mat-table border="1px">
-  <thead>
-    <tr>
-        <th>Customer Id</th> 
-        <th>Customer Name</th> 
-        <th>Account Number</th >
-        <th>Email</th >
-        <th>Gender</th >
-        <th>Number Id</th >
-        <th>Confirm password</th>  
-        <th> Password</th>    
-    <th>Action</th>  
-  
-     
-    </tr>
-  </thead>
-  <tbody>
-    <tr mdbTableCol *ngFor="let customer of customers">
-      <!-- <th scope="row">{{el.id}}</th> -->
-      <td>{{customer.customer_id}}</td>  
-      <td>{{customer.customer_name}}</td>  
-      <td>{{customer.account_number}}</td>  
-      <td>{{customer.email}}</td> 
-      <td>{{customer.gender}}</td> 
-      <td>{{customer.national_id}}</td>  
-      <td>{{customer.confirm_password}}</td> 
-      <td>{{customer.password}}</td> 
-      <td><button (click)="customerDetails(customer.customer_id)">Details</button></td>
-    </tr>
-  </tbody>
-</table> 
-<router-outlet></router-outlet>
+
+
+<!-- form -->
+<br/>
+<form class="float-right " width="600px ">
+  <input type="text" [(ngModel)]="username"  class="form-control float-right " name="username" placeholder="UserName" (input)="search()" >  
+ 
+</form>
+   
+
+
+
+   <!--Table-->
+   
+   <p>customer-list works!</p> 
+   <div>
+     <mat-toolbar >
+        <span >Customer List</span>
+      </mat-toolbar>
+   
+   <mat-table class="customers-table mat-elevation-z8" [dataSource]="customers" matSort >
+           
+   
+       <ng-container matColumnDef="customer list">
+               <mat-header-cell *matHeaderCellDef mat-sort-header>Customer List</mat-header-cell>
+           </ng-container>
+       
+       <ng-container matColumnDef="customer_id">
+           <mat-header-cell *matHeaderCellDef>ID</mat-header-cell>
+          
+           <mat-cell *matCellDef="let customer ">{{customer.customer_id}}</mat-cell>
+       </ng-container>
+   
+       <ng-container matColumnDef="customer_name" >
+           <mat-header-cell *matHeaderCellDef >Name</mat-header-cell>
+          
+           <mat-cell *matCellDef="let customer">{{customer.customer_name}}</mat-cell>
+       </ng-container>
+   
+       <ng-container matColumnDef="account_number">
+           <mat-header-cell *matHeaderCellDef>Account_Number</mat-header-cell>
+          
+           <mat-cell *matCellDef="let customer">{{customer.account_number}}</mat-cell>
+       </ng-container>
+   
+       <ng-container matColumnDef="email">
+           <mat-header-cell *matHeaderCellDef>Email</mat-header-cell>
+          
+           <mat-cell *matCellDef="let customer">{{customer.email}}</mat-cell>
+       </ng-container>
+   
+       <ng-container matColumnDef="username">
+           <mat-header-cell *matHeaderCellDef>UserName</mat-header-cell>
+          
+           <mat-cell *matCellDef="let customer">{{customer.username}}</mat-cell>
+       </ng-container>
+   
+       <ng-container matColumnDef="gender">
+           <th mat-header-cell *matHeaderCellDef>Gender</th>
+          
+           <td mat-cell *matCellDef="let customer ">{{customer.gender}}</td>
+       </ng-container>
+   
+       <ng-container matColumnDef="national_id">
+           <mat-header-cell *matHeaderCellDef>National Id</mat-header-cell>
+          
+           <mat-cell *matCellDef="let customer">{{customer.national_id}}</mat-cell>
+       </ng-container>
+         
+       <ng-container matColumnDef="confirm_password">
+           <mat-header-cell *matHeaderCellDef>Confirm Password</mat-header-cell>
+          
+           <mat-cell *matCellDef="let customer ">{{customer.confirm_password}}</mat-cell>
+       </ng-container>
+   
+       <ng-container matColumnDef="password">
+           <mat-header-cell *matHeaderCellDef>password</mat-header-cell>
+          
+           <mat-cell *matCellDef="let customer">{{{customer.password</mat-cell>
+       </ng-container>
+       <ng-container matColumnDef="action">
+           <mat-header-cell *matHeaderCellDef> Action </mat-header-cell>   
+           <mat-cell *matCellDef="let customer"> 
+             <button mat-raised-button class="btn btn-info" (click)="customerDetails(customer.customer_id)">Details</button> 
+           </mat-cell>
+         </ng-container>
+         
+         <ng-container matColumnDef="actionu">
+           <mat-header-cell *matHeaderCellDef> Action </mat-header-cell>   
+           <mat-cell *matCellDef="let customer"> 
+             <button mat-raised-button class="btn btn-info " (click)="customerEdit(customer.customer_id)">Update</button> 
+           </mat-cell>
+         </ng-container>
+         <ng-container matColumnDef="actiond">
+            <mat-header-cell *matHeaderCellDef> Action </mat-header-cell>   
+            <mat-cell *matCellDef="let customer"> 
+              <button mat-raised-button class="btn btn-danger" (click)="customerDelete(customer.customer_id)">Delete</button> 
+            </mat-cell>
+          </ng-container>
+         <!-- <ng-container matRowDef="actionu">
+           <mat-header-cell *matHeaderCellDef> Action </mat-header-cell>   
+           <mat-cell *matCellDef="let customer"> 
+             <button mat-raised-button (click)="customerAdd()">Add</button> 
+           </mat-cell>
+         </ng-container> -->
+       <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+       
+       <mat-row *matRowDef="let row; columns: displayedColumns"></mat-row> 
+       <mat-paginator [pageSizeOptions]="[5, 10, 20]"></mat-paginator> 
+    
+   </mat-table>
+  </div>
+   <router-outlet></router-outlet>  
