--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,7 +23,7 @@
 <mat-toolbar color="primary">
   <mat-toolbar-row>
         <span  class="example-fill-remaining-space ">Money Wallet</span>
-        <a mat-button routerLink="view" >TransactionList</a> &nbsp;&nbsp;&nbsp;
+        <a mat-button routerLink="viewTransaction" >TransactionList</a> &nbsp;&nbsp;&nbsp;
         <a mat-button routerLink="view" >CustomerList</a>&nbsp;&nbsp;&nbsp;
         <a mat-button routerLink="view" >AddCustomer</a>
      
