--- a/src/app/customer-details/customer-details.component.html
+++ b/src/app/customer-details/customer-details.component.html
@@ -6,7 +6,7 @@
           <label><b>customer_id: </b></label> {{customers.customer_id}}
         </div>
         <div>
-          <label><b>customer_name: </b></label> {{customers.customer_name}}
+          <label><b>customer_name: </b></label> {{customers.customerName}}
         </div>
         <div>
           <label><b>username: </b></label> {{customers.username}}
@@ -15,7 +15,7 @@
             <label><b>address: </b></label> {{customers.address}}
           </div>
           <div>
-            <label><b>Phone_number: </b></label> {{customers.Phone_number}}
+            <label><b>Phone_number: </b></label> {{customers.phoneNumber}}
           </div>
           <div>
             <label><b>Email Id: </b></label> {{customers.email}}
@@ -25,7 +25,7 @@
       <br>
       <br>
       <button  (click)="customerList()" class="btn btn-primary float-right">Back to Customer List</button><br>
-    <table mat-table class="table table-striped" border="1px">
+    <!-- <table mat-table class="table table-striped" border="1px">
       <thead>
           <tr>
             <th>customer_id</th>
@@ -49,7 +49,7 @@
         </tr>
       </tbody>
     </table>
-  </div>
+  </div> -->
 
  
 
