--- a/src/app/customer-edit/customer-edit.component.html
+++ b/src/app/customer-edit/customer-edit.component.html
@@ -5,12 +5,12 @@
   <form (ngSubmit)="onSubmit()" >
     <div class="form-group">
       <label for="name">customer_name</label>
-      <input type="text" class="form-control" id="customer_name" required [(ngModel)]="customer.customer_name" name="customer_name">
+      <input type="text" class="form-control" id="customer_name" required [(ngModel)]="customer.customerName" name="customer_name">
     </div>
 
     <div class="form-group">
       <label for="name">account_number</label>
-      <input type="text" class="form-control" id="account_number" required [(ngModel)]="customer.account_number" name="account_number">
+      <input type="text" class="form-control" id="account_number" required [(ngModel)]="customer.accountNumber" name="account_number">
     </div>
 
     <div class="form-group">
